--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     </head>
 
     <body>
-        
+        <div class="header">
+            <div class="header-navbar">
+                <div class="header-navbar-left">Header Logo</div>
+                <div class="header-navbar-right">
+                    <ul>
+                        <li>header link one</li>
+                        <li>header link two</li>
+                        <li>header link three</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="header-content">
+                <div class="header-content-left">
+                    <div class="header-content-main">This website is awesome</div>
+                    <div class="header-content-secondary">
+                        This website has some subtext that goes here under the main title. 
+                        It's a smaller font and the color is lower contrast
+                    </div>
+                    <div class="header-content-button">
+                        <button type="button">Sign up</button>
+                    </div>
+                </div>
+                <div class="header-content-right">
+                    <img src="data:," alt="this is a placeholder for an image">
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
