--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <!-- Header Information -->
         <div class="header">
             <div class="header-navbar">
                 <div class="header-navbar-left">Header Logo</div>
@@ -35,6 +36,53 @@
                 </div>
             </div>
         </div>
+        <!-- Main Information -->
+        <div class="main">
+            <div class="main-text"> Some random information</div>
+            <div class="main-cards">
+                <div class="main-card">
+                    <img src="data:," alt="this is a placeholder for an image">
+                    <div class="main-card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="main-card">
+                    <img src="data:," alt="this is a placeholder for an image">
+                    <div class="main-card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="main-card">
+                    <img src="data:," alt="this is a placeholder for an image">
+                    <div class="main-card-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="main-card">
+                    <img src="data:," alt="this is a placeholder for an image">
+                    <div class="main-card-text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+            <div class="main-quotes">
+                <div class="main-quotes-text">
+                    This is an inspiring quote, or a testimonial from a customer.
+                    Maybe it's just filling up space, or maybe people will actually read it.
+                    Who knows? All I know is that it looks nice.
+                </div>
+                <div class="main-quotes-author">
+                    -Spiderman, Miles Morales
+                </div>
+            </div>
+            <div class="main-action">
+                <div class="main-action-left">
+                    <div class="main-action-header"> Call to action! It's time!</div>
+                    <div class="main-action-text">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <div class="main-action-right">
+                    <button type="button">Sign up</button>
+                </div>
+            </div>
+        </div>
 
+        <!-- Footer Information -->
+        <div class="footer">
+            <div class="footer-text">
+                Copyright © Facebook 2023
+            </div>
+        </div>
     </body>
 </html>
