--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Landing Page</title>
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
 
     <body>
@@ -11,13 +12,12 @@
         <div class="header">
             <div class="header-navbar">
                 <div class="header-navbar-left">Header Logo</div>
-                <div class="header-navbar-right">
-                    <ul>
-                        <li>header link one</li>
-                        <li>header link two</li>
-                        <li>header link three</li>
-                    </ul>
-                </div>
+                <ul class="header-navbar-right">
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            
             </div>
 
             <div class="header-content">
@@ -28,11 +28,11 @@
                         It's a smaller font and the color is lower contrast
                     </div>
                     <div class="header-content-button">
-                        <button type="button">Sign up</button>
+                        <button class="button" type="button">Sign up</button>
                     </div>
                 </div>
                 <div class="header-content-right">
-                    <img src="data:," alt="this is a placeholder for an image">
+                    <img class="image1" src="./images/stars.jpg" alt="this is a placeholder for an image">
                 </div>
             </div>
         </div>
@@ -73,7 +73,7 @@
                     <div class="main-action-text">Sign up for our product by clicking that button right over there!</div>
                 </div>
                 <div class="main-action-right">
-                    <button type="button">Sign up</button>
+                    <button class="button" type="button">Sign up</button>
                 </div>
             </div>
         </div>
