--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="header-content-right">
-                    <img class="image1" src="./images/stars.jpg" alt="this is a placeholder for an image">
+                    <img class="image1" src="https://www.w3schools.com/howto/img_snow.jpg">
                 </div>
             </div>
         </div>
