Finished Starter Template

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="header-content-right">
-                    <img class="image1" src="https://www.w3schools.com/howto/img_snow.jpg">
+                    <img class="header-image" src="https://www.w3schools.com/howto/img_snow.jpg">
                 </div>
             </div>
         </div>
@@ -41,19 +41,19 @@
             <div class="main-text"> Some random information</div>
             <div class="main-cards">
                 <div class="main-card">
-                    <img src="data:," alt="this is a placeholder for an image">
+                    <img class="main-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png" alt="this is a placeholder for an image">
                     <div class="main-card-text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="main-card">
-                    <img src="data:," alt="this is a placeholder for an image">
+                    <img class="main-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png" alt="this is a placeholder for an image">
                     <div class="main-card-text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="main-card">
-                    <img src="data:," alt="this is a placeholder for an image">
+                    <img class="main-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png" alt="this is a placeholder for an image">
                     <div class="main-card-text">this is some subtext under an illustration or image</div>
                 </div>
-                <div class="main-card">
-                    <img src="data:," alt="this is a placeholder for an image">
+                <div  class="main-card">
+                    <img class="main-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png" alt="this is a placeholder for an image">
                     <div class="main-card-text">this is some subtext under an illustration or image</div>
                 </div>
             </div>
@@ -68,12 +68,14 @@
                 </div>
             </div>
             <div class="main-action">
-                <div class="main-action-left">
-                    <div class="main-action-header"> Call to action! It's time!</div>
-                    <div class="main-action-text">Sign up for our product by clicking that button right over there!</div>
-                </div>
-                <div class="main-action-right">
-                    <button class="button" type="button">Sign up</button>
+                <div class="main-action-container">
+                    <div class="main-action-left">
+                        <div class="main-action-header"> Call to action! It's time!</div>
+                        <div class="main-action-text">Sign up for our product by clicking that button right over there!</div>
+                    </div>
+                    <div class="main-action-right">
+                        <button class="button white" type="button">Sign up</button>
+                    </div>
                 </div>
             </div>
         </div>
